--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
         </ul>
         </div>
+        <div id="editBlock" style="display:none;">
+            <span id="closeEdit">X</span>
+            <form  id="editContactForm">
+                Enter the new contact name:<input id="addNewName" type="text" placeholder="Name" name="name" />
+                Enter the new contact phone number:<input id="addNewPhone" type="number" placeholder="Phone Number" name="phone"/>
+                <input type="submit" />
+            </form>
+        </div>
       
         <script src="myScript.js"></script>
     </body>
