Added some validations and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <input type="submit" />
         </form>
         <div id="listContainer">
+            <p id="caption"></p>
         <ul id="contactList">
 
         </ul>
